fix(frontend): add fallback for overflow-x clip

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -112,6 +112,7 @@ html {
 }
 
 body{
+  overflow-x: hidden;
   overflow-x: clip;
 }
 
